# dioxus-app

./: .gitignore  Cargo.toml  README.md
crates/app/: Cargo.toml
crates/app/src/: components.rs  lib.rs
crates/app/src/components/: counter.rs  posts.rs
crates/ssr/: Cargo.toml
crates/ssr/src/: main.rs
crates/web/: Cargo.toml  index.html
crates/web/src/: main.rs
