[package]
name = "ssr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2.4", features = ["ssr"] }
app = { path = "../app" }
rocket = "0.5.0-rc.2"
tokio = { version = "1.18.2", features = ["macros"] }